tests/knowledge/context/aws/scenarios/cross_version/cloudformation_special_scenarios/get_az_func/cfn-account-data/cloudrail-developer/us-east-1/ec2-describe-security-groups.json
{
    "SecurityGroups": [
        {
            "Description": "default VPC security group",
            "GroupId": "sg-037f03facf9085fc9",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-037f03facf9085fc9",
                            "UserId": "698055230729"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "10.41.37.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "698055230729",
            "VpcId": "vpc-000a7e8b1ce43cb61"
        }
    ]
}
